cmake_minimum_required(VERSION 3.12.0)
set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/bin CACHE PATH
  "Locaction for installation"
  FORCE)
if(CMAKE_CONFIGURATION_TYPES)
  set(CMAKE_CONFIGURATION_TYPES Debug Release)
  set(CMAKE_BUILD_TYPE "${CMAKE_CONFIGURATION_TYPES}" CACHE STRING
    "choose the type to build, options are: Debug Release" FORCE)
endif()
project(ComputationalGeometry)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)
add_subdirectory(13B)
add_subdirectory(14C)
add_subdirectory(514B)
add_subdirectory(552D)
add_subdirectory(613A)
add_subdirectory(630O)
add_subdirectory(651C)
add_subdirectory(660D)
add_subdirectory(800B)
add_subdirectory(961D)
add_subdirectory(1036E)
